# study-notes

./: .all-contributorsrc  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  LICENSE  README.md  package.json  pnpm-lock.yaml
.vuepress/: config.ts  navbar.ts  plugins.ts  sidebar.ts  theme.ts
algorithms/: README.md
bash/: README.md
python/ai-demos/: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml  telemetry.ps1
python/ai-demos/.roo/: mcp.json
python/ai-demos/src/ai_demos/: price_calculator.py  utils.py
python/ai-demos/src/ai_demos/agno_examples/: custom_tools.py  helloworld.py  multi_agent_teams.py  search_tool.py  trace_with_agentops.py  trace_with_arize_phoenix.py  trace_with_opik.py  utils.py
python/ai-demos/src/ai_demos/gradio/: chat_interface.py  helloworld.py  interface.py  live_demo.py
python/ai-demos/src/ai_demos/mcp_examples/: hello_mcp.py
python/ai-demos/src/ai_demos/ollama_examples/: hello_ollama.py  ollama_generate.py  ollama_utils.py  streaming_output.py
python/ai-demos/src/ai_demos/openai_examples/: calling_tools.py  dynamic_instructions.py  guessing_number.py  handoff_example.py  helloworld.py  openai_agent.py  openai_client.py  streamed_agent.py  trace_with_agenta.py  trace_with_futureagi.py  trace_with_langfuse.py  trace_with_scorecard.py  trace_with_traceloop.py  trace_with_weave.py  tracing.py  utils.py  web_searching.py
python/ai-demos/src/ai_demos/pydantic_ai_examples/: calling_tools.py  dynamic_system_prompt.py  guessing_number.py  ollama_provider.py  sequential_chat.py  streamed_agent.py  structured_output.py  utils.py  web_search.py
python/ai-demos/src/ai_demos/smolagents_examples/: custom_model.py  guessing_number.py  helloworld.py  multi_agents.py  using_tool.py  utils.py  web_search.py
python/ai-demos/tests/: test_list_models.py  test_openai_client.py
python/pyotp-sample/: README.md  app.py  pyproject.toml
python/pyotp-sample/templates/: index.html
python/python-sample/: pyproject.toml
python/python-sample/src/basic/: f_string.py
python/python-sample/src/collection/: dict.py
python/python-sample/src/concurrent/: async.py  coroutine.py  handle_exceptions.py  many_coroutines.py  multi_process_usage.py  multi_thread_usage.py  parallel_tasks.py  subprocess_usage.py  task.py  timeout.py  wrap_blocking_io.py
python/python-sample/src/math/: decimal_usage.py
python/python-sample/src/std/: date.py  function_tools.py  locale_usage.py
python/python-sample/src/web/: socket_demo.py  stream_demo.py
python/python-sample/web/: smtp_email.py
python/textual-example/: README.md  animation.py  buttons.py  helloworld.py  pyproject.toml  radio_buttons.py  reactive.py  screen.py  show_time.py  workder.py
python/textual-example/css/: buttons.css  helloworld.css  radio_buttons.css  reactive.css  worker.css
python/thirdparty-libraries/: .gitignore  README.md  docker-compose.yml  pyproject.toml
python/thirdparty-libraries/crawler/: awesome_dotnet.py  everia_club.py  extract_anime_names.py
python/thirdparty-libraries/data/: postgresql.py  pydantic_example.py  rss_feed.py
python/thirdparty-libraries/misc/: loguru_example.py  rich_example.py  whenever_demo.py
python/thirdparty-libraries/src/crawler/: awesome_dotnet.py  github.http  nshens_com.py
python/thirdparty-libraries/src/crawler/obsolete/: beautiful_soup.py
python/thirdparty-libraries/src/data/: fake_data.py  microsoft_excel.py  sqlalchemy_usage.py
python/thirdparty-libraries/src/misc/: typer_demo.py  whenever_demo.py
python/thirdparty-libraries/src/rxpy/: observer.py  opterator.py
python/thirdparty-libraries/src/web/: requests_demo.py
rust/thirdparty-crates/: Cargo.toml  README.md
rust/thirdparty-crates/examples/: channel.rs  confy.rs  ctrlc.rs  indicatif.rs  log.rs
rust/thirdparty-crates/src/: main.rs
(+2087 files in other folders)
