[tool.poetry]
name = "pyotp-sample"
version = "0.1.0"
description = "pyotp sample"
authors = ["techstay <lovery521@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyotp = "^2.6.0"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.5"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
