[project]
dependencies = [
  "httpx>=0.28.1",
  "textual>=2.1.2",
]
description = "Add your description here"
name = "textual-example"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "python-dotenv>=1.0.1",
  "textual-dev>=1.7.0",
]
