[package]
edition = "2021"
name = "thirdparty-crates"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
confy = "0.5.1"
crossbeam-channel = "0.5.8"
ctrlc = "3.4.0"
exitcode = "1.1.2"
indicatif = "0.17.5"
log = "0.4.19"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
signal-hook = "0.3.15"
simple_logger = "4.2.0"

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
proptest = "1.2.0"
